[workspace]
resolver = "2"
members = [
    "crates/openkspace-io",
    "crates/openkspace-recon",
    "crates/openkspace-cli",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Nathan Riley <git@nathanriley.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sigilweaver/OpenKSpace"
homepage = "https://sigilweaver.app/openkspace/"
documentation = "https://sigilweaver.app/openkspace/docs/"
readme = "README.md"
rust-version = "1.87"
keywords = ["mri", "ismrmrd", "k-space", "reconstruction", "imaging"]
categories = ["science", "command-line-utilities"]

# Note: a workspace-wide `unsafe_code = "deny"` lint was considered to
# match the rest of the Sigilweaver suite, but `openkspace-recon` has
# isolated `unsafe { std::mem::zeroed() }` usage for zero-initializing
# C-compatible POD structs and `ndarray::s!` internally uses `unsafe`
# blocks under its own `#[allow]`. Tightening this requires a small
# refactor planned for 0.3.0.

[workspace.dependencies]
# Core numerics
ndarray = { version = "0.17", features = ["rayon"] }
num-complex = "0.4"
rustfft = "6.2"

# HDF5 / ISMRMRD
hdf5-metno = { version = "0.13", features = ["blosc"] }

# XML header
quick-xml = { version = "0.41", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }

# Parallelism / IO
# CLI / logging / errors
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
indicatif = "0.18"

# Image output
image = { version = "0.25", default-features = false, features = ["png"] }

# Workspace-internal crates
openkspace-io = { path = "crates/openkspace-io", version = "0.3.0" }
openkspace-recon = { path = "crates/openkspace-recon", version = "0.3.0" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
