[package]
name = "openkspace-cli"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
description = "Command-line interface for OpenKSpace MRI reconstruction engine."
keywords = ["mri", "reconstruction", "cli", "medical-imaging"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "openkspace"
path = "src/main.rs"

[dependencies]
openkspace-io = { workspace = true }
openkspace-recon = { workspace = true }
ndarray = { workspace = true }
num-complex = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = "3"
