[package]
name = "openkspace-io"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Readers for MRI raw k-space formats: ISMRMRD (HDF5) and FastMRI (HDF5)."
keywords = ["mri", "ismrmrd", "fastmri", "hdf5", "medical-imaging"]
categories = ["parser-implementations", "science"]

[dependencies]
hdf5-metno = { workspace = true }
ndarray = { workspace = true }
num-complex = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
